[package]
name = "error-trace"
version = "3.3.0"
edition = "2021"
authors = [ "Lut99" ]
description = "Small Rust crate for printing nice errors traits based on `std::error::Error::source()`."
repository = "https://github.com/Lut99/error-trace-rs"
license = "Apache-2.0"


[dependencies]
console = { version = "0.15.0", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }


[features]
default = [ "macros" ]
colors  = [ "colours" ]
colours = [ "colors", "dep:console" ]
macros = []
serde = ["dep:serde"]
