[package]
name = "error-trace"
version = "4.0.0"
edition = "2024"
authors = ["Lut99"]
description = "Small Rust crate for printing nice errors traits based on `std::error::Error::source()`."
repository = "https://github.com/Lut99/error-trace-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["value-formatting"]


[[example]]
name = "trace"
path = "examples/trace.rs"

[[example]]
name = "colored"
path = "examples/colored.rs"
required-features = ["colors"]

[[example]]
name = "one_time"
path = "examples/one_time.rs"
required-features = ["macros"]


[dependencies]
console = { version = "0.15.0", optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }


[features]
default = ["macros"]

colors = ["dep:console"]
macros = []
serde = ["dep:serde"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
